# miya

./: .gitignore  01_Philosophy.md  02_Scenarios_and_Roles.md  04_Model_Lab.md  07_Autonomous_Cycle.md  08_Cognitive_Executor.md  11_Relationship_Memory.md  13_Autonomy_Contract.md  17_Quality_Lab.md  18_System_Templates.md  Makefile  README.md  pyproject.toml
.cursor/rules/: miaos-engineering.md
config/: aeon.default.yaml
configs/runtime/: macbook_air_m4_32gb.yaml  macbook_pro_m4pro_48gb.yaml
docs/adr/: 0001-runtime-first-then-editor.md  0002-vite-first-tauri-later.md
docs/aeon/: README.md
docs/architecture/: dependency_graph.md  hardware_profiles.md  implementation_roadmap.md
docs/blocks/: 03_Model_Manager.md  05_Personality_Builder.md  06_Living_Memory.md  09_Tool_Layer_Sandbox.md  10_Perception_IO.md  12_Knowledge_Base.md  14_Self_Reflection.md  15_Observability.md  16_Portability.md
evals/golden/: mia_mvp.jsonl
examples/actions/: publish_post.json  read_web.json
examples/mia-minimal/: README.md  graph.simple.json  persona.yaml
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/docs/: BLOCKS-RU.md  CHECKLIST-v1.0.ru.md  CHECKLIST-v11.4.ru.md  CHECKLIST-v12.2.ru.md  GUIDE-v1.0.ru.md  GUIDE-v11.4.ru.md  GUIDE-v12.2.ru.md
frontend/scripts/: start-miaos-backend.sh
frontend/src/: App.css  App.tsx  ErrorBoundary.tsx  GraphStudio.css  GraphStudio.tsx  index.css  main.tsx  miyaBridge.ts
frontend/src/editor/: AeonStudio.tsx  AgentInspector.tsx  AgentNode.tsx  ApprovalNode.tsx  ApprovalQueue.tsx  ChatStudio.tsx  GraphJsonPanel.tsx  GraphLibrary.tsx  IONode.tsx  MemoryStudio.tsx  MiaScenario.tsx  ModelStudio.tsx  PersonaStudio.tsx  QualityLab.tsx  RunConsole.tsx  RuntimeProfileStudio.tsx  SimpleGraph.tsx  TemplateRegistry.tsx  ToolNode.tsx  ToolRegistry.tsx  TraceViewer.tsx  WelcomePanel.tsx  agentTypes.ts  demoAssets.ts  editorPrefs.ts  graphStorage.ts  graphStudioUtils.ts  graphTemplates.ts  miaMinimalSetup.ts  miaosApi.ts  miaosExport.ts  miaosImport.ts  providerPrefs.ts  runHighlight.ts  runOutput.ts  runReplay.ts  theme.ts  traceTimeline.ts  useNodeData.ts
scripts/: com.miya.aeon-consolidate.plist.template  com.miya.aeon-daemon.plist.template  dev.sh  install-aeon-services.sh  miaos-doctor.py  run-aeon-consolidate.sh  run-aeon-daemon.sh  uninstall-aeon-services.sh
src/aeon/: __init__.py  cli.py  config.py  consolidation.py  paths.py  runtime.py  types.py
src/aeon/layers/: __init__.py  l1_embodied.py  l2_memory.py  l3_active_inference.py  l4_goals.py  l5_execution.py  l6_identity.py  l7_governance.py  l8_constitution.py
src/aeon/persistence/: __init__.py  goals_store.py  tick_store.py
src/miaos/: __init__.py  __main__.py  api.py  cli.py  model_manager.py  settings.py  templates.py
src/miaos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/miaos/executor/: __init__.py  checkpoints.py  events.py  graph_schema.py  runner.py
src/miaos/memory/: __init__.py  store.py
src/miaos/models/: __init__.py  compatibility.py  manager.py  providers.py  records.py  registry.py
src/miaos/observability/: __init__.py  decision_log.py  tracing.py
src/miaos/persona/: __init__.py  guard.py  package.py  schemas.py
src/miaos/quality/: __init__.py  (+3 more)
tests/: __init__.py  test_cli_model_commands.py  test_model_manager.py  test_model_provider.py  test_runtime_catalog.py
tests/eval/: __init__.py  test_quality_lab.py
tests/integration/: README.md  __init__.py
tests/unit/: __init__.py  test_aeon_constitution.py  test_aeon_governance.py  test_aeon_heartbeat.py  test_aeon_paths.py  test_aeon_runtime.py  test_api.py  test_api_aeon.py  test_chat_session.py  test_cli.py  test_decision_log.py  test_graph_runtime.py  test_intent_guard.py  test_memory_store.py  test_model_compatibility.py  test_model_providers.py  test_model_registry.py  test_persona_package.py  test_quality_lab.py  test_runtime_profiles.py  test_runtime_settings.py  test_safety_policy.py  test_tool_executor.py  test_tool_registry.py
(+14 files in other folders)
