[project]
name = "miaos-builder"
version = "0.1.0"
description = "Runtime-first local MAS builder for MiaOS virtual personalities."
readme = "docs/architecture/implementation_roadmap.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "rich",
    "typer",
]

[project.scripts]
miaos = "miaos.cli:app"

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miaos"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"src/miaos/cli.py" = ["FBT001", "FBT002"]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["miaos"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
