[project]
name = "miaos-builder"
version = "0.1.0"
description = "Runtime-first local MAS builder for MiaOS virtual personalities."
readme = "docs/architecture/implementation_roadmap.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic>=2",
    "pyyaml",
    "rich",
    "typer",
]

[project.scripts]
miaos = "miaos.cli:app"

[dependency-groups]
dev = [
    "httpx",
    "mypy",
    "pytest",
    "ruff",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miaos"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"src/miaos/cli.py" = ["FBT001", "FBT002", "PLR0913"]
"src/miaos/api.py" = ["C901"]
"src/miaos/models/manager.py" = ["PLR0913"]
"src/miaos/models/registry.py" = ["S608"]
"src/miaos/executor/runner.py" = ["PLR0913"]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["miaos"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
